*simpleitk-1.2.4 (06 May 2021)

  06 May 2021;  <chymera@gentoo.org> +files/simpleitk-1.2.4-int-cast.patch,
  +files/simpleitk-1.2.4-module.patch, +simpleitk-1.2.4.ebuild,
  simpleitk-2.0.0.ebuild:
  sci-libs/simpleitk: cmake runs, python not really :-/

  03 Jan 2021;  <chymera@gentoo.org> -files/0dfae3e_reversed.patch,
  -files/77a3d89_reversed.patch, -files/simpleitk-1.2.4-int-cast.patch,
  -files/simpleitk-1.2.4-module.patch, -simpleitk-1.2.4.ebuild,
  simpleitk-2.0.0.ebuild:
  sci-libs/simpleitk: current simpleitk pending lua-5.3 availability

  27 Nov 2020;  <chymera@gentoo.org> +files/0dfae3e_reversed.patch,
  +files/77a3d89_reversed.patch, +files/simpleitk-1.2.4-int-cast.patch,
  +files/simpleitk-1.2.4-module.patch, -simpleitk-1.2.3.ebuild,
  simpleitk-1.2.4.ebuild, simpleitk-2.0.0.ebuild:
  sci-libs/simpleitk: new package ahead of Gentoo Science

*simpleitk-2.0.0 (25 Sep 2020)

  25 Sep 2020;  <chymera@gentoo.org> +metadata.xml, +simpleitk-2.0.0.ebuild:
  sci-libs/simpleitk: new package ahead of Gentoo Science